Update Content and images

--- a/about.html
+++ b/about.html
@@ -25,9 +25,7 @@
     <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
-    <header
-      style="background-image: url('images/new-header.png'); height: 500px"
-    >
+    <header style="background-image: url('images/about.png'); height: 500px">
       <nav id="navbar">
         <a href="home.html"
           ><img
@@ -47,6 +45,9 @@
           <li data-aos="zoom-out"><a href="">Contact</a></li>
         </ul>
       </nav>
+      <div class="about-us">
+        <h1 data-aos="fade-up">Us.</h1>
+      </div>
     </header>
 
     <footer>
@@ -114,7 +115,8 @@
       </div>
       <hr data-aos="zoom-in" data-aos-offset="40" />
       <p class="copyright" data-aos="zoom-in" data-aos-offset="50">
-        Merge your property with Regal Marketing - All Rights Reserved
+        Copyright © 2022 Regal Marketing Pvt. Ltd | Powered by Regal Marketing
+        Pvt. Ltd
       </p>
     </footer>
 
