--- a/home.html
+++ b/home.html
@@ -45,9 +45,12 @@
         </ul>
       </nav>
       <div class="search">
-        <h1 data-aos="fade-up">You have got questions, we have got search.</h1>
+        <h1 data-aos="fade-up">Find your new investment</h1>
         <form data-aos="zoom-in">
-          <input type="text" placeholder="&#x270e; Enter keyword" />
+          <input
+            type="text"
+            placeholder="&#x270e; Enter Society or Services Name"
+          />
           <i class="fas fa-search"></i>
         </form>
       </div>
@@ -61,24 +64,24 @@
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
             <div class="overlay">
-              <span>Discovery Garden</span>
-              <a href="#">Islamabad</a>
+              <span>Regal Emporium</span>
+              <a href="#">Park View City Islamabad</a>
             </div>
-            <img src="images/featured-products-1.jpg" alt="" />
+            <img src="images/featured-product-1.jpg" alt="" />
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="overlay">
-              <span>Kingdom Valley</span>
-              <a href="#">Islamabad</a>
+              <span>Blue World Sports Valley</span>
+              <a href="#">Chakri Interchange Islamabad</a>
             </div>
-            <img src="images/featured-products-2.jpg" alt="" />
+            <img src="images/featured-product-2.jpg" alt="" />
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="overlay">
-              <span>Park View City</span>
-              <a href="#">Islamabad</a>
+              <span>New Metro City</span>
+              <a href="#">Gujar Khan</a>
             </div>
-            <img src="images/featured-products-3.jpg" alt="" />
+            <img src="images/featured-product-3.jpg" alt="" />
           </div>
         </div>
       </div>
@@ -130,7 +133,7 @@
     <!--About Section-->
     <section class="about">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">Insights</h1>
+        <h1 class="section-heading" data-aos="fade-up">News Reels</h1>
         <p data-aos="fade-up">
           Are you informed? More news more often move closer to the world
         </p>
@@ -138,23 +141,28 @@
           <div class="flex-1">
             <img
               class="about-me-img"
-              src="images/updated-news.jpg"
+              src="images/news.png"
               alt=""
               data-aos="zoom-in"
             />
           </div>
           <div class="flex-1">
             <h3 data-aos="fade-bottom">Offices | 02 August 2022</h3>
-            <h1 class="news-title" data-aos="fade-bottom">Business Insights</h1>
+            <h1 class="news-title" data-aos="fade-bottom">
+              3564 low budget living units completed under Naya Pakistan Housing
+              Program
+            </h1>
             <p class="news-body" data-aos="fade-bottom">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
-              amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-              veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-              ex ea commodo consequat
+              Some 3,564 low-cost housing units from the Workers' Welfare Fund
+              (WWF) and 18,499 from the Akhuwat Foundation have been completed
+              under the Naya Pakistan Housing Scheme (NPHP), according to
+              information provided to the Senate by the Minister of State for
+              Law and Justice Shahada Awan (NPHP). The Minister informed that
+              housing finance applications from 9,563 candidates selected in the
+              ballot for housing under construction are being processed. The
+              Federal Employee Housing Authority (FGEHA), the Workers' Welfare
+              Fund and development authorities work together to deliver low-cost
+              housing projects.
             </p>
             <button class="btn btn-secondary" data-aos="fade-up">
               EXPLORE ALL NEWS
@@ -167,15 +175,14 @@
     <!--Our Blog Section-->
     <section class="blog" data-aos="fade-up">
       <div class="container">
-        <h1 class="section-heading" data-aos="fade-up">WeBlog</h1>
+        <h1 class="section-heading" data-aos="fade-up">Regal Blogs</h1>
         <p data-aos="fade-up">
-          We smash you with the information that will make your investment
-          easier
+          Are you exploring new investment options, BEGIN READING
         </p>
         <div class="card-wrapper">
           <div class="card" data-aos="zoom-in">
             <div class="img-wrapper">
-              <img src="images/advantages-of-investment.jpeg" />
+              <img src="images/blog-1.jpg" />
             </div>
             <div class="card-content">
               <a href="#">
@@ -185,17 +192,17 @@
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+                Real estate investments have the muscle to unlock endless
+                opportunities for those who compel to the business or to save
+                for the better future. The passive income that each investment
+                produces with the passage of time
               </p>
               <a href="#" class="read-more" data-aos="fade-up">Read More</a>
             </div>
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="img-wrapper">
-              <img src="images/early-bird.png" />
+              <img src="images/blog-2.jpg" />
             </div>
             <div class="card-content">
               <a href="#">
@@ -203,17 +210,17 @@
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+                New metro city Gujar Khan Files bookings are now open at Regal
+                Marketing and a good number of files are available at our
+                office. New Metro City Gujar Khan Early Bird Balloting has been
+                announced by BSM developers.
               </p>
               <a href="#" class="read-more" data-aos="fade-up">Read More</a>
             </div>
           </div>
           <div class="card" data-aos="zoom-in">
             <div class="img-wrapper">
-              <img src="images/golden-investment.jpeg" />
+              <img src="images/blog-3.jpg" />
             </div>
             <div class="card-content">
               <a href="#">
@@ -331,9 +338,8 @@
             data-aos="fade-up"
           />
           <p data-aos="fade-up">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam
+            Group of expert investment advisors, consultants and sales
+            executives insuring profit and leagal compliance.
           </p>
         </div>
         <div class="col">
@@ -387,7 +393,8 @@
       </div>
       <hr data-aos="zoom-in" data-aos-offset="40" />
       <p class="copyright" data-aos="zoom-in" data-aos-offset="50">
-        Merge your property with Regal Marketing - All Rights Reserved
+        Copyright © 2022 Regal Marketing Pvt. Ltd | Powered by Regal Marketing
+        Pvt. Ltd
       </p>
     </footer>
 
