--- a/home.html
+++ b/home.html
@@ -164,7 +164,7 @@
               Fund and development authorities work together to deliver low-cost
               housing projects.
             </p>
-            <button class="btn btn-secondary" data-aos="fade-up">
+            <button class="btn btn-secondary" data-aos="fade-bottom">
               EXPLORE ALL NEWS
             </button>
           </div>
@@ -228,10 +228,10 @@
               </a>
               <span data-aos="fade-up">August 29, 2022</span>
               <p data-aos="fade-up">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+                After getting huge accomplishments in New Metro City Kharian and
+                Golf City Gwadar, BSM Developer is going to construct a new
+                project named “New Metro City Gujar khan”. The project offers
+                all the up-to-date facilities
               </p>
               <a href="#" class="read-more" data-aos="fade-up">Read More</a>
             </div>
