About us page start

--- a/about.html
+++ b/about.html
@@ -50,6 +50,48 @@
       </div>
     </header>
 
+    <!--About Section-->
+    <section class="about">
+      <div class="container">
+        <h1 class="section-heading" data-aos="fade-up">Who we Are</h1>
+        <p data-aos="fade-up">
+          Are you informed? More news more often move closer to the world
+        </p>
+        <div class="container flex items-center">
+          <div class="flex-1">
+            <img
+              class="about-me-img"
+              src="images/about-us.png"
+              alt=""
+              data-aos="zoom-in"
+            />
+          </div>
+          <div class="flex-1">
+            <h1 class="news-title" data-aos="fade-bottom">
+              WE HAVE MORE THAN 7 YEARS OF EXPERIENCE
+            </h1>
+            <p class="news-body" data-aos="fade-bottom">
+              Regal Marketing Network is among the fastest-growing marketing
+              network around the world having its offices in many cities of
+              Pakistan and also worldwide agents. The company deals in all
+              matters of housing societies, residential plots, commercial plots
+              and property. We are a team of highly professional people with 7+
+              years of combined experience in real estate. Regal marketing
+              private limited is the name of the trust; we focus on building
+              long-term relationships with our client partners. We are
+              passionate about building client’s value. We start with extensive
+              research and accomplish the matured implementation right from the
+              first step to property planning and profit placement. We
+              understand that all clients have unique needs and we strive to
+              custom tailor programs to accomplish each individual’s goals and
+              dreams. We will listen and work relentlessly for you this is our
+              promise.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="row">
         <div class="col">
