--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
-    <header style="background-image: url('images/new-header.png')">
+    <header style="background-image: url('images/new-header.jpg')">
       <nav id="navbar">
         <a href="home.html">
           <img
