--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
-    <header style="background-image: url('images/about.png'); height: 500px">
+    <header style="background-image: url('images/about.png'); height: 600px">
       <nav id="navbar">
         <a href="home.html"
           ><img
@@ -87,6 +87,69 @@
               dreams. We will listen and work relentlessly for you this is our
               promise.
             </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Our Team Section -->
+    <section class="our-team">
+      <div class="container">
+        <h1 class="section-heading" data-aos="fade-up">Our Team</h1>
+        <p data-aos="fade-up">
+          Standing close to our Customers, as we are ready to serve you with
+          improved Solutions
+        </p>
+        <div class="teams">
+          <div class="team">
+            <img src="images/team-1.png" alt="" />
+            <div class="name">Shahroz Iqbal</div>
+            <div class="desig">Marketing Manager</div>
+            <div class="about">
+              Mr.Shahroz has 10 years of experience in a multinational firm.
+              Besides effective marketing strategies, he has a strong grip on
+              digital marketing, databases and generating new business leads for
+              the company.
+            </div>
+            <div class="social-links">
+              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-github"></i></a>
+            </div>
+          </div>
+          <div class="team">
+            <img src="images/team-2.png" alt="" />
+            <div class="name">Mahad Abrar</div>
+            <div class="desig">Sales Manager</div>
+            <div class="about">
+              Graduated from Philippines School of Science and Business
+              Administration, Mr. Mahad has served abroad in the field of sales
+              and marketing from the past 6 years.
+            </div>
+            <div class="social-links">
+              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-github"></i></a>
+            </div>
+          </div>
+          <div class="team">
+            <img src="images/team-1.png" alt="" />
+            <div class="name">Ahsan Waseem Dar</div>
+            <div class="desig">Finanace And Taxation Manager</div>
+            <div class="about">
+              Mr. Ahsan is authorized Federal Board of Revenue Income tax
+              practitioner. And has a diverse portfolio and 7 years’ working
+              experience in the national and multinational companies in
+              Pakistan.
+            </div>
+            <div class="social-links">
+              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+              <a href="#"><i class="fa fa-github"></i></a>
+            </div>
           </div>
         </div>
       </div>
