--- a/home.html
+++ b/home.html
@@ -25,7 +25,21 @@
     <script src="https://kit.fontawesome.com/2e2b578872.js"></script>
   </head>
   <body>
-    <header style="background-image: url('images/new-header.jpg')">
+    <header>
+      <div class="carousel-container">
+        <div class="carousel">
+          <div class="item main">
+            <img src="images/new-header.jpg" alt="mountain" width="100%" />
+          </div>
+          <div class="item">
+            <img src="images/new-header-2.png" alt="beach" />
+          </div>
+        </div>
+        <div class="navigation">
+          <div class="prev nav-btn"><</div>
+          <div class="next nav-btn">></div>
+        </div>
+      </div>
       <nav id="navbar">
         <a href="home.html">
           <img
