Our CEO and MD Message

--- a/about.html
+++ b/about.html
@@ -92,6 +92,48 @@
       </div>
     </section>
 
+    <!--Our CEO Message Section-->
+    <section class="ceo-msg" data-aos="fade-up">
+      <div class="container">
+        <div class="card-wrapper">
+          <div class="card flex" data-aos="zoom-in">
+            <div class="img-wrapper flex-1">
+              <img src="images/team-1.png" />
+            </div>
+            <div class="card-content flex-1">
+              <a href="#">
+                <h1 data-aos="fade-up">CEO Message</h1>
+              </a>
+              <span data-aos="fade-up">Irfan Rafiq</span>
+              <p data-aos="fade-up">
+                Real estate investments have the muscle to unlock endless
+                opportunities for those who compel to the business or to save
+                for the better future. The passive income that each investment
+                produces with the passage of time
+              </p>
+            </div>
+          </div>
+          <div class="card flex" data-aos="zoom-in">
+            <div class="card-content flex-1">
+              <a href="#">
+                <h1 data-aos="fade-up">MD Message</h1>
+              </a>
+              <span data-aos="fade-up">Shahzaib Khan</span>
+              <p data-aos="fade-up">
+                Real estate investments have the muscle to unlock endless
+                opportunities for those who compel to the business or to save
+                for the better future. The passive income that each investment
+                produces with the passage of time
+              </p>
+            </div>
+            <div class="img-wrapper flex-1">
+              <img src="images/team-1.png" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Our Team Section -->
     <section class="our-team">
       <div class="container">
