Our mission and vision section

--- a/about.html
+++ b/about.html
@@ -134,6 +134,40 @@
       </div>
     </section>
 
+    <!-- Our Vision Section -->
+    <section class="mission-stmt">
+      <div class="container">
+        <div class="card-wrapper">
+          <div class="card" data-aos="zoom-in">
+            <img src="images/our-mission.png" alt="" data-aos="ease-out" />
+            <h2 data-aos="fade-up">Our Mission</h2>
+            <p data-aos="fade-up">
+              Managing workspaces, retail, residential or industrial property,
+              efficiently and cost-effectively, handling the loops and enhancing
+              the worth.
+            </p>
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <img src="images/our-vision.png" alt="" data-aos="ease-out" />
+            <h2 data-aos="fade-up">Our Vision</h2>
+            <p data-aos="fade-up">
+              Trade your assets with us. You might be able to build a larger and
+              more valuable property than you could have on each parcel
+              separately.
+            </p>
+          </div>
+          <div class="card" data-aos="zoom-in">
+            <img src="images/our-video.png" alt="" data-aos="ease-out" />
+            <h2 data-aos="fade-up">Our Video</h2>
+            <p data-aos="fade-up">
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Our Team Section -->
     <section class="our-team">
       <div class="container">
