--- a/home.html
+++ b/home.html
@@ -101,6 +101,7 @@
       </div>
     </section>
 
+    <!-- Our Service Section -->
     <section class="services">
       <div class="container">
         <h1 class="section-heading" data-aos="fade-up">Providing Solutions</h1>
