About us contact update

--- a/about.html
+++ b/about.html
@@ -142,26 +142,35 @@
             <img src="images/our-mission.png" alt="" data-aos="ease-out" />
             <h2 data-aos="fade-up">Our Mission</h2>
             <p data-aos="fade-up">
-              Managing workspaces, retail, residential or industrial property,
-              efficiently and cost-effectively, handling the loops and enhancing
-              the worth.
+              We’re dedicated to achieving our vision by creating an energetic,
+              positive, results-driven work environment focused on the
+              investment and development of long-term relationships. We measure
+              our success by the results delivered to clients. Our ethics are
+              built on our commitment to offer superior customer service,
+              combining an entrepreneurial flair and bespoke service of a
+              fast-growing organisation.
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
             <img src="images/our-vision.png" alt="" data-aos="ease-out" />
-            <h2 data-aos="fade-up">Our Vision</h2>
+            <h2 data-aos="fade-up">Our Acheivements</h2>
             <p data-aos="fade-up">
-              Trade your assets with us. You might be able to build a larger and
-              more valuable property than you could have on each parcel
-              separately.
+              We have grown to success by bringing tremendous amounts of sales
+              to our clients. Having sold more than 7,870 files entending over a
+              period of 1.5 years.
             </p>
           </div>
           <div class="card" data-aos="zoom-in">
             <img src="images/our-video.png" alt="" data-aos="ease-out" />
-            <h2 data-aos="fade-up">Our Video</h2>
+            <h2 data-aos="fade-up">Our Vision</h2>
             <p data-aos="fade-up">
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              Our vision is to be the leading real estate service provider in
+              the region and the preferred place of employment for real estate
+              professionals. We consistently strive to develop collaborative
+              partnerships, based on transparency and mutual trust, which serve
+              to build enduring client relationships. As we expand, we’re
+              committed to these principles, which have served our company and
+              clients through the years.
             </p>
           </div>
         </div>
