Styling in about us page

--- a/about.html
+++ b/about.html
@@ -186,50 +186,52 @@
           improved Solutions
         </p>
         <div class="teams">
-          <div class="team">
-            <img src="images/team-1.png" alt="" />
-            <div class="name">Shahroz Iqbal</div>
-            <div class="desig">Marketing Manager</div>
-            <div class="about">
+          <div class="team" data-aos="zoom-in">
+            <img src="images/team-1.png" alt="" data-aos="ease-out" />
+            <div class="name" data-aos="fade-up">Shahroz Iqbal</div>
+            <div class="desig" data-aos="fade-up">Marketing Manager</div>
+            <div class="about" data-aos="fade-up">
               Mr.Shahroz has 10 years of experience in a multinational firm.
               Besides effective marketing strategies, he has a strong grip on
               digital marketing, databases and generating new business leads for
               the company.
             </div>
-            <div class="social-links">
+            <div class="social-links" data-aos="ease-out">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-instagram"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
               <a href="#"><i class="fa fa-github"></i></a>
             </div>
           </div>
-          <div class="team">
-            <img src="images/team-1.png" alt="" />
-            <div class="name">Mahad Abrar</div>
-            <div class="desig">Sales Manager</div>
-            <div class="about">
+          <div class="team" data-aos="zoom-in">
+            <img src="images/team-1.png" alt="" data-aos="ease-out" />
+            <div class="name" data-aos="fade-up">Mahad Abrar</div>
+            <div class="desig" data-aos="fade-up">Sales Manager</div>
+            <div class="about" data-aos="fade-up">
               Graduated from Philippines School of Science and Business
               Administration, Mr. Mahad has served abroad in the field of sales
               and marketing from the past 6 years.
             </div>
-            <div class="social-links">
+            <div class="social-links" data-aos="ease-out">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-instagram"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
               <a href="#"><i class="fa fa-github"></i></a>
             </div>
           </div>
-          <div class="team">
-            <img src="images/team-1.png" alt="" />
-            <div class="name">Ahsan Waseem Dar</div>
-            <div class="desig">Finanace And Taxation Manager</div>
-            <div class="about">
+          <div class="team" data-aos="zoom-in">
+            <img src="images/team-1.png" alt="" data-aos="ease-out" />
+            <div class="name" data-aos="fade-up">Ahsan Waseem Dar</div>
+            <div class="desig" data-aos="fade-up">
+              Finanace And Taxation Manager
+            </div>
+            <div class="about" data-aos="fade-up">
               Mr. Ahsan is authorized Federal Board of Revenue Income tax
               practitioner. And has a diverse portfolio and 7 years’ working
               experience in the national and multinational companies in
               Pakistan.
             </div>
-            <div class="social-links">
+            <div class="social-links" data-aos="ease-out">
               <a href="#"><i class="fa fa-facebook"></i></a>
               <a href="#"><i class="fa fa-instagram"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
