Products and services page design

--- a/about.html
+++ b/about.html
@@ -38,7 +38,9 @@
           <li data-aos="zoom-out">
             <a href="about.html" style="color: #f9ae41">About</a>
           </li>
-          <li data-aos="zoom-out"><a href="">Products & Services</a></li>
+          <li data-aos="zoom-out">
+            <a href="product&services.html">Products & Services</a>
+          </li>
           <li data-aos="zoom-out"><a href="">Business Insights</a></li>
           <li data-aos="zoom-out"><a href="">Videos</a></li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
@@ -251,9 +253,8 @@
             data-aos="fade-up"
           />
           <p data-aos="fade-up">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam
+            Group of expert investment advisors, consultants and sales
+            executives insuring profit and leagal compliance.
           </p>
         </div>
         <div class="col">
@@ -272,9 +273,11 @@
             <div class="underline" data-aos="fade-up"><span></span></div>
           </h3>
           <ul>
-            <li data-aos="fade-up"><a href="">Home</a></li>
-            <li data-aos="fade-up"><a href="">About</a></li>
-            <li data-aos="fade-up"><a href="">Products & Services</a></li>
+            <li data-aos="fade-up"><a href="home.html">Home</a></li>
+            <li data-aos="fade-up"><a href="about.html">About</a></li>
+            <li data-aos="fade-up">
+              <a href="product&services.html">Products & Services</a>
+            </li>
             <li data-aos="fade-up"><a href="">Business Insights</a></li>
             <li data-aos="fade-up"><a href="">Videos</a></li>
             <li data-aos="fade-up"><a href="">Careers</a></li>
