--- a/home.html
+++ b/home.html
@@ -51,7 +51,9 @@
         </a>
         <ul id="menu">
           <li data-aos="zoom-out"><a href="about.html">About</a></li>
-          <li data-aos="zoom-out"><a href="">Products & Services</a></li>
+          <li data-aos="zoom-out">
+            <a href="product&services.html">Products & Services</a>
+          </li>
           <li data-aos="zoom-out"><a href="">Business Insights</a></li>
           <li data-aos="zoom-out"><a href="">Videos</a></li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
@@ -372,9 +374,11 @@
             <div class="underline" data-aos="fade-up"><span></span></div>
           </h3>
           <ul>
-            <li data-aos="fade-up"><a href="">Home</a></li>
-            <li data-aos="fade-up"><a href="">About</a></li>
-            <li data-aos="fade-up"><a href="">Products & Services</a></li>
+            <li data-aos="fade-up"><a href="home.html">Home</a></li>
+            <li data-aos="fade-up"><a href="about.html">About</a></li>
+            <li data-aos="fade-up">
+              <a href="product&services.html">Products & Services</a>
+            </li>
             <li data-aos="fade-up"><a href="">Business Insights</a></li>
             <li data-aos="fade-up"><a href="">Videos</a></li>
             <li data-aos="fade-up"><a href="">Careers</a></li>
