About us content updated

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         /></a>
         <ul id="menu">
           <li data-aos="zoom-out">
-            <a href="about.html" style="color: #f9ae41">About</a>
+            <a href="about.html" style="color: #f9ae41">About Us</a>
           </li>
           <li data-aos="zoom-out">
             <a href="product&services.html">Products & Services</a>
@@ -48,7 +48,7 @@
         </ul>
       </nav>
       <div class="about-us">
-        <h1 data-aos="fade-up">Us.</h1>
+        <h1 data-aos="fade-up">About Us</h1>
       </div>
     </header>
 
@@ -189,7 +189,11 @@
         </p>
         <div class="teams">
           <div class="team" data-aos="zoom-in">
-            <img src="images/team-1.png" alt="" data-aos="ease-out" />
+            <img
+              src="images/marketing-manager.png"
+              alt=""
+              data-aos="ease-out"
+            />
             <div class="name" data-aos="fade-up">Shahroz Iqbal</div>
             <div class="desig" data-aos="fade-up">Marketing Manager</div>
             <div class="about" data-aos="fade-up">
@@ -198,15 +202,9 @@
               digital marketing, databases and generating new business leads for
               the company.
             </div>
-            <div class="social-links" data-aos="ease-out">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-instagram"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-github"></i></a>
-            </div>
           </div>
           <div class="team" data-aos="zoom-in">
-            <img src="images/team-1.png" alt="" data-aos="ease-out" />
+            <img src="images/sales-manager.png" alt="" data-aos="ease-out" />
             <div class="name" data-aos="fade-up">Mahad Abrar</div>
             <div class="desig" data-aos="fade-up">Sales Manager</div>
             <div class="about" data-aos="fade-up">
@@ -214,15 +212,13 @@
               Administration, Mr. Mahad has served abroad in the field of sales
               and marketing from the past 6 years.
             </div>
-            <div class="social-links" data-aos="ease-out">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-instagram"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-github"></i></a>
-            </div>
           </div>
           <div class="team" data-aos="zoom-in">
-            <img src="images/team-1.png" alt="" data-aos="ease-out" />
+            <img
+              src="images/marketing-manager.png"
+              alt=""
+              data-aos="ease-out"
+            />
             <div class="name" data-aos="fade-up">Ahsan Waseem Dar</div>
             <div class="desig" data-aos="fade-up">
               Finanace And Taxation Manager
@@ -232,12 +228,6 @@
               practitioner. And has a diverse portfolio and 7 years’ working
               experience in the national and multinational companies in
               Pakistan.
-            </div>
-            <div class="social-links" data-aos="ease-out">
-              <a href="#"><i class="fa fa-facebook"></i></a>
-              <a href="#"><i class="fa fa-instagram"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-github"></i></a>
             </div>
           </div>
         </div>
