--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
           />
         </a>
         <ul id="menu">
-          <li data-aos="zoom-out"><a href="about.html">About</a></li>
+          <li data-aos="zoom-out"><a href="about.html">About Us</a></li>
           <li data-aos="zoom-out">
             <a href="product&services.html">Products & Services</a>
           </li>
