--- a/product&services.html
+++ b/product&services.html
@@ -36,7 +36,7 @@
         /></a>
         <ul id="menu">
           <li data-aos="zoom-out">
-            <a href="about.html">About</a>
+            <a href="about.html">About Us</a>
           </li>
           <li data-aos="zoom-out">
             <a href="" style="color: #f9ae41">Products & Services</a>
