Contact us page design

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
           <li data-aos="zoom-out"><a href="">Business Insights</a></li>
           <li data-aos="zoom-out"><a href="">Videos</a></li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
-          <li data-aos="zoom-out"><a href="">Contact</a></li>
+          <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="about-us">
