--- a/product&services.html
+++ b/product&services.html
@@ -39,12 +39,14 @@
             <a href="about.html">About Us</a>
           </li>
           <li data-aos="zoom-out">
-            <a href="" style="color: #f9ae41">Products & Services</a>
+            <a href="product&services.html" style="color: #f9ae41"
+              >Products & Services</a
+            >
           </li>
           <li data-aos="zoom-out"><a href="">Business Insights</a></li>
           <li data-aos="zoom-out"><a href="">Videos</a></li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
-          <li data-aos="zoom-out"><a href="">Contact</a></li>
+          <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="about-us">
