--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,22 @@
         </ul>
       </nav>
       <div class="about-us">
-        <h1 data-aos="fade-up">Get in touch</h1>
+        <h1 data-aos="fade-up">Contact Us</h1>
       </div>
     </header>
+
+    <div class="contact-us">
+      <div class="title flex justify-center items-center">
+        <h2>Get in Touch</h2>
+      </div>
+      <div class="box">
+        <div class="contact form">
+          <h3>Send a message</h3>
+        </div>
+        <div class="contact info"></div>
+        <div class="contact map"></div>
+      </div>
+    </div>
 
     <footer>
       <div class="row">
