Design contact form and contact info

--- a/home.html
+++ b/home.html
@@ -390,7 +390,7 @@
             Newsletter
             <div class="underline" data-aos="fade-up"><span></span></div>
           </h3>
-          <form data-aos="zoom-in">
+          <form class="footer-form" data-aos="zoom-in">
             <i class="far fa-envelope" data-aos="fade-right"></i>
             <input
               type="email"
