--- a/product&services.html
+++ b/product&services.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-    <title>Regal Marketing | Home</title>
+    <title>Regal Marketing | Products & Services</title>
 
     <link
       rel="stylesheet"
@@ -240,7 +240,7 @@
             Newsletter
             <div class="underline" data-aos="fade-up"><span></span></div>
           </h3>
-          <form data-aos="zoom-in">
+          <form class="footer-form" data-aos="zoom-in">
             <i class="far fa-envelope" data-aos="fade-right"></i>
             <input
               type="email"
