--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-    <title>Regal Marketing | Home</title>
+    <title>Regal Marketing | About</title>
 
     <link
       rel="stylesheet"
@@ -225,7 +225,7 @@
             </div>
             <div class="about" data-aos="fade-up">
               Mr. Ahsan is authorized Federal Board of Revenue Income tax
-              practitioner. And has a diverse portfolio and 7 years’ working
+              practitioner and has a diverse portfolio and 7 years’ working
               experience in the national and multinational companies in
               Pakistan.
             </div>
@@ -279,7 +279,7 @@
             Newsletter
             <div class="underline" data-aos="fade-up"><span></span></div>
           </h3>
-          <form data-aos="zoom-in">
+          <form class="footer-form" data-aos="zoom-in">
             <i class="far fa-envelope" data-aos="fade-right"></i>
             <input
               type="email"
