--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-    <title>Regal Marketing | Home</title>
+    <title>Regal Marketing | Contact</title>
 
     <link
       rel="stylesheet"
@@ -61,8 +61,76 @@
       <div class="box">
         <div class="contact form">
           <h3>Send a message</h3>
+          <form action="">
+            <div class="form-box">
+              <div class="row50">
+                <div class="input-box">
+                  <span>First Name</span>
+                  <input type="text" placeholder="John" name="" id="" />
+                </div>
+                <div class="input-box">
+                  <span>Last Name</span>
+                  <input type="text" placeholder="Doe" name="" id="" />
+                </div>
+              </div>
+              <div class="row50">
+                <div class="input-box">
+                  <span>Email</span>
+                  <input
+                    type="text"
+                    placeholder="example@gmail.com"
+                    name=""
+                    id=""
+                  />
+                </div>
+                <div class="input-box">
+                  <span>Mobile</span>
+                  <input
+                    type="text"
+                    placeholder="+92-334 5685263"
+                    name=""
+                    id=""
+                  />
+                </div>
+              </div>
+              <div class="row100">
+                <div class="input-box">
+                  <span>Message</span>
+                  <textarea
+                    placeholder="Write your message here... "
+                  ></textarea>
+                </div>
+              </div>
+              <div class="row100">
+                <div class="input-box">
+                  <input type="submit" value="Send" />
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
-        <div class="contact info"></div>
+        <div class="contact info">
+          <h3>Contact Info</h3>
+          <div class="infoBox">
+            <div>
+              <span><ion-icon name="location-outline"></ion-icon></span>
+              <p>
+                1st Floor, Zamzam Arcade, Plaza 1-A, Street # 39, Alia Market,
+                G-13/2, Islamabad
+              </p>
+            </div>
+            <div>
+              <span><ion-icon name="mail-outline"></ion-icon></span>
+              <a href="mailto:info.regalmarketing@gmail.com"
+                >info.regalmarketing@gmail.com</a
+              >
+            </div>
+            <div>
+              <span><ion-icon name="call-outline"></ion-icon></span>
+              <a href="tel:+923349000007">+92 334 9000007</a>
+            </div>
+          </div>
+        </div>
         <div class="contact map"></div>
       </div>
     </div>
@@ -112,7 +180,7 @@
             Newsletter
             <div class="underline" data-aos="fade-up"><span></span></div>
           </h3>
-          <form data-aos="zoom-in">
+          <form class="footer-form" data-aos="zoom-in">
             <i class="far fa-envelope" data-aos="fade-right"></i>
             <input
               type="email"
@@ -150,6 +218,14 @@
     <script
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
+    ></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
 
     <script src="js/slider.js"></script>
