--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
             <li data-aos="fade-up"><a href="">Business Insights</a></li>
             <li data-aos="fade-up"><a href="">Videos</a></li>
             <li data-aos="fade-up"><a href="">Careers</a></li>
-            <li data-aos="fade-up"><a href="">Contact</a></li>
+            <li data-aos="fade-up"><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="col">
