Contact us page completed

--- a/contact.html
+++ b/contact.html
@@ -113,25 +113,47 @@
           <h3>Contact Info</h3>
           <div class="infoBox">
             <div>
-              <span><ion-icon name="location-outline"></ion-icon></span>
+              <span><ion-icon name="location"></ion-icon></span>
               <p>
                 1st Floor, Zamzam Arcade, Plaza 1-A, Street # 39, Alia Market,
                 G-13/2, Islamabad
               </p>
             </div>
             <div>
-              <span><ion-icon name="mail-outline"></ion-icon></span>
+              <span><ion-icon name="mail"></ion-icon></span>
               <a href="mailto:info.regalmarketing@gmail.com"
                 >info.regalmarketing@gmail.com</a
               >
             </div>
             <div>
-              <span><ion-icon name="call-outline"></ion-icon></span>
+              <span><ion-icon name="call"></ion-icon></span>
               <a href="tel:+923349000007">+92 334 9000007</a>
             </div>
+            <ul class="sci">
+              <li>
+                <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+              </li>
+              <li>
+                <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+              </li>
+              <li>
+                <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+              </li>
+              <li>
+                <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="contact map"></div>
+        <div class="contact map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.1353775856405!2d72.95700661454369!3d33.65365394607806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38df95e3551fb377%3A0xa9b4fdb900023d2d!2sRegal%20Marketing%20Pvt.%20Ltd.!5e0!3m2!1sen!2s!4v1660913107844!5m2!1sen!2s"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
       </div>
     </div>
 
