Videos page start

--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
             <a href="product&services.html">Products & Services</a>
           </li>
           <li data-aos="zoom-out"><a href="">Business Insights</a></li>
-          <li data-aos="zoom-out"><a href="">Videos</a></li>
+          <li data-aos="zoom-out"><a href="videos.html">Videos</a></li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
           <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
@@ -380,7 +380,7 @@
               <a href="product&services.html">Products & Services</a>
             </li>
             <li data-aos="fade-up"><a href="">Business Insights</a></li>
-            <li data-aos="fade-up"><a href="">Videos</a></li>
+            <li data-aos="fade-up"><a href="videos.html">Videos</a></li>
             <li data-aos="fade-up"><a href="">Careers</a></li>
             <li data-aos="fade-up"><a href="contact.html">Contact</a></li>
           </ul>
