--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             <a href="product&services.html">Products & Services</a>
           </li>
           <li data-aos="zoom-out"><a href="">Business Insights</a></li>
-          <li data-aos="zoom-out"><a href="">Videos</a></li>
+          <li data-aos="zoom-out"><a href="videos.html">Videos</a></li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
           <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
@@ -269,7 +269,7 @@
               <a href="product&services.html">Products & Services</a>
             </li>
             <li data-aos="fade-up"><a href="">Business Insights</a></li>
-            <li data-aos="fade-up"><a href="">Videos</a></li>
+            <li data-aos="fade-up"><a href="videos.html">Videos</a></li>
             <li data-aos="fade-up"><a href="">Careers</a></li>
             <li data-aos="fade-up"><a href="contact.html">Contact</a></li>
           </ul>
