--- a/product&services.html
+++ b/product&services.html
@@ -44,7 +44,7 @@
             >
           </li>
           <li data-aos="zoom-out"><a href="">Business Insights</a></li>
-          <li data-aos="zoom-out"><a href="">Videos</a></li>
+          <li data-aos="zoom-out"><a href="videos.html">Videos</a></li>
           <li data-aos="zoom-out"><a href="">Careers</a></li>
           <li data-aos="zoom-out"><a href="contact.html">Contact</a></li>
         </ul>
@@ -230,7 +230,7 @@
               <a href="product&services.html">Products & Services</a>
             </li>
             <li data-aos="fade-up"><a href="">Business Insights</a></li>
-            <li data-aos="fade-up"><a href="">Videos</a></li>
+            <li data-aos="fade-up"><a href="videos.html">Videos</a></li>
             <li data-aos="fade-up"><a href="">Careers</a></li>
             <li data-aos="fade-up"><a href="contact.html">Contact</a></li>
           </ul>
