Changes in video module

--- a/videos.html
+++ b/videos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-    <title>Regal Marketing | Contact</title>
+    <title>Regal Marketing | Video</title>
 
     <link
       rel="stylesheet"
@@ -55,6 +55,25 @@
         <h1 data-aos="fade-up">Video Gallery</h1>
       </div>
     </header>
+
+    <div class="videos-gallery">
+      <h1>Our Videos</h1>
+      <div class="video-row">
+        <div class="video-col">
+          <div class="feature-img">
+            <img src="images/main-video.jpeg" width="100%" />
+          </div>
+        </div>
+        <div class="video-col">
+          <div class="small-img-row">
+            <div class="small-img">
+              <img src="images/small-video-1.jpg" alt="" />
+            </div>
+            <p>How to add multiple videos on website</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer>
       <div class="row">
